perf: Melhorei a performance do projeto ao organizar as classes e seus métodos utilizados de forma mais eficiente